--- a/Chapter6Example.csproj
+++ b/Chapter6Example.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Chapter6Example.LogicalOperators</StartupObject>
+    <StartupObject>Chapter6Example.BitwiseOperators</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BitwiseOperators.cs" />
     <Compile Include="LogicalOperators.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
